--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,10 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Video Caller</title>
 </head>
-
-<body class="font-[Inter]">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
