--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
-  <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/logo.webp" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Video Caller</title>
 </head>
